# wasm-tools

./: Cargo.toml  todo.md
.github/actions/publish-release/: action.yml
.github/workflows/: fuzz.yml  main.yml  publish-to-cratesio.yml  publish.yml  release-process.yml
ci/: publish.rs
crates/wasm-encoder/src/core/: code.rs
crates/wasmparser/: Cargo.toml
crates/wasmparser/opcodes/: Cargo.toml  build.rs  opcodes.txt
crates/wasmparser/opcodes/src/: lib.rs
crates/wasmparser/src/: binary_reader.rs  features.rs  lib.rs
crates/wasmparser/src/validator/: operators.rs
crates/wasmprinter/src/: lib.rs  operator.rs
crates/wast/: Cargo.toml
crates/wast/src/core/: expr.rs
crates/wat/: Cargo.toml
crates/wit-component/src/: encoding.rs  metadata.rs  printing.rs  validation.rs
crates/wit-component/src/encoding/: types.rs  world.rs
crates/wit-parser/src/: decoding.rs  lib.rs  resolve.rs
crates/wit-parser/src/ast/: resolve.rs
crates/wit-parser/src/resolve/: clone.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bar.rs  foo.rs
tests/local/: my-wasm-proposals.wast
tests/local/missing-features/: my-wasm-proposals.wast
tests/snapshots/local/: my-wasm-proposals.wast.json
tests/snapshots/local/missing-features/: my-wasm-proposals.wast.json
tests/snapshots/local/my-wasm-proposals.wast/: 0.print  1.print  16.print  17.print  18.print  19.print  2.print  20.print  21.print  3.print
tests/snapshots/testsuite/block.wast/: 0.print-folded
tests/snapshots/testsuite/br.wast/: 0.print-folded
tests/snapshots/testsuite/br_if.wast/: 0.print-folded
(+139 files in other folders)
