[package]
name = "wasm-tools-libfuzzer"
version = "0.0.1"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys" }

[[bin]]
name = "foo"
path = "fuzz_targets/foo.rs"
test = false
[[bin]]
name = "bar"
path = "fuzz_targets/bar.rs"
test = false
