[package]
name = "wasmparser-opcodes"
version.workspace = true
license.workspace = true
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser/opcodes"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser/opcodes"
description = """
Static wasm opcode definitions to be reflected on at build time
"""
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true
